<resources>
    <string name="app_name">Esqueci Minha Senha</string>
    <string name="exemplo_pesquisa">Ex: Spotify</string>
    <string name="nome_botao_pesquisar">Pesquisar</string>
    <string name="todo">TODO</string>
    <string name="descricao">Descrição</string>
    <string name="categoria">Categoria</string>
    <string name="login">Login</string>
    <string name="salvar_cartao">salvar cartão</string>
    <string name="ex_facebook">Ex: Facebook</string>
    <string name="senha">Senha</string>
    <string name="adicionar_novo_cartao">Adicionar novo cartão</string>
    <string name="cor">Cor</string>
    <string name="mensagem_cartao_salvo">Cartão salvo</string>
    <string name="erro_ao_salvar">Ops. Algo deu errado.</string>
    <string name="cartao">cartao</string>
    <string name="alterar">ALTERAR</string>
    <string name="cartao_alterado">Cartão alterado.</string>
    <string name="posicao">posicao</string>
    <string name="titulo_alterando_cartao">Alterando cartão</string>


    <string-array name="linguagens">
        <item></item>
        <item>Senha de app</item>
        <item>Site de compras</item>
        <item>Site de educação</item>
        <item>Trabalho</item>
        <item>Streaming</item>
        <item>Rede social</item>
        <item>Internet Banking</item>
        <item>Senha de débito</item>
        <item>Senha de crédito</item>
        <item>Senha eletrônica</item>
        <item>Rede social</item>
        <item>Jogos</item>
    </string-array>
</resources>