<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activity.CadastrarCartaoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/item_listview_card_view"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:cardBackgroundColor="@sample/Cartoes.json/cartoes/cor">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/cardview_textview_descricao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="#80000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@sample/Cartoes.json/cartoes/descricao" />

                <TextView
                    android:id="@+id/cardview_textview_categoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="#80000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/cardview_textview_descricao"
                    app:layout_constraintTop_toBottomOf="@+id/cardview_textview_descricao"
                    tools:text="@sample/Cartoes.json/cartoes/categoria" />

                <TextView
                    android:id="@+id/textView_Login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="@+id/cardview_textview_categoria"
                    app:layout_constraintTop_toBottomOf="@+id/cardview_textview_categoria"
                    tools:text="@sample/Cartoes.json/cartoes/login" />

                <TextView
                    android:id="@+id/textView_Senha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="@+id/textView_Login"
                    app:layout_constraintTop_toBottomOf="@+id/textView_Login"
                    tools:text="@sample/Cartoes.json/cartoes/senha" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/descricao"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/item_listview_card_view"
            app:layout_constraintStart_toStartOf="@+id/item_listview_card_view"
            app:layout_constraintTop_toBottomOf="@id/item_listview_card_view" />

        <EditText
            android:id="@+id/edittext_descricao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/ex_facebook"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/item_listview_card_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/categoria"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edittext_descricao"
            app:layout_constraintStart_toStartOf="@+id/edittext_descricao"
            app:layout_constraintTop_toBottomOf="@+id/edittext_descricao" />

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:entries="@array/linguagens"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/edittext_descricao"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/spinnerCategoria"
            app:layout_constraintStart_toStartOf="@+id/spinnerCategoria"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCategoria" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/spinnerCategoria"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/senha"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <Button
            android:id="@+id/button_cadastrar_novo_cartao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/salvar_cartao"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>